--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <button type="button" id="main-btn">Submit</button>
+
+
+
+
+
+  
   <script src="main.js"></script>
 </body>
 </html>
