--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <button id="main-btn">PRESS ME!</button>
+  <button id="other-btn">PRESS ME TOO!</button>
+
+  <div id="container">CLICK A BUTTON TO START</div>
+  
   <script src="main.js"></script>
 </body>
 </html>
