--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <div class="container mt-3 text-center">
     <div id="instructor-buttons">
       <button type="button" class="btn btn-primary" id="All">All</button>
-      <button type="button" class="btn btn-secondary" id="doc">Dr. T</button>
-      <button type="button" class="btn btn-success" id="aja">Aja</button>
-      <button type="button" class="btn btn-danger" id="trinity">Trinity</button>
+      <button type="button" class="btn btn-secondary" id="Doc">Dr. T</button>
+      <button type="button" class="btn btn-success" id="Aja">Aja</button>
+      <button type="button" class="btn btn-danger" id="Trinity">Trinity</button>
     </div>
 
-    <div id="pies">
+    <div id="pies" class="d-flex flex-wrap justify-content-around">
       
     </div>
     <hr>
