Added bootstrap form

--- a/index.html
+++ b/index.html
@@ -22,7 +22,43 @@
     </div>
     <hr>
     <div class="pie-form">
-
+      <h3>Add a Pie</h3>
+      <form>
+        <div class="mb-3">
+          <label class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Ingredients</label>
+          <input type="text" class="form-control" id="ingredients" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Bake Temp</label>
+          <input type="number" class="form-control" id="bakeTemp" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Drink Pairing</label>
+          <input type="text" class="form-control" id="drinkPairing" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Image URL</label>
+          <input type="url" class="form-control" id="imageUrl" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Instructor</label>
+          <select class="form-select">
+            <option selected>Select an Instructor</option>
+            <option value="1">Dr. T</option>
+            <option value="2">Aja</option>
+            <option value="3">Trinity</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Ice Cream</label>
+          <input type="text" class="form-control" id="iceCream" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
   </div>
 
