completed form functionality

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </div>
         <div class="mb-3">
           <label class="form-label">Instructor</label>
-          <select class="form-select">
+          <select id="instructor" class="form-select">
             <option selected>Select an Instructor</option>
-            <option value="1">Dr. T</option>
-            <option value="2">Aja</option>
-            <option value="3">Trinity</option>
+            <option value="Doc">Dr. T</option>
+            <option value="Aja">Aja</option>
+            <option value="Trinity">Trinity</option>
           </select>
         </div>
         <div class="mb-3">
